tests/input/semantic_errors/arraySizeTypeMismatch.c
#include <sdfdfs.h> // TODO fix in AST creator
int main(){
    int x[0.5];
    return 0;
}
